--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,29 @@
 {
+  "functions": {
+    "source": "dist/functions",
+    "predeploy": [
+      "npm run lint-functions",
+      "npm run lint-app",
+      "npm run typecheck-app",
+      "npm run build-functions",
+      "npm run build-app",
+      "npm run copy-deps",
+      "npm run install-deps"
+    ]
+  },
   "hosting": {
-    "public": "public",
+    "public": "dist/public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [
+      {
+        "source": "**/**",
+        "function": "nextApp"
+      }
+    ],
+    "predeploy": "npm run build-public"
   }
 }
