--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "install-deps": "cd \"dist/functions\" && npm i"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.1.0",
     "next": "latest",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "sass": "^1.26.3"
   },
   "devDependencies": {
     "@types/node": "12.0.12",
