--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "install-deps": "cd \"dist/functions\" && npm i"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@zeit/next-sass": "^1.0.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.9.0",
