--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@zeit/next-sass": "^1.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.1.0",
     "next": "latest",
     "react": "16.8.6",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.8.6",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "12.0.12",
