--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "firebase": "^7.12.0",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.1.0",
-    "next": "latest",
+    "next": "^9.3.5",
     "react": "16.8.6",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.8.6",
@@ -40,6 +40,7 @@
     "@types/node": "12.0.12",
     "@types/react": "^16.6.0",
     "@types/react-dom": "16.8.4",
+    "@types/styled-components": "^5.1.0",
     "cpx": "1.5.0",
     "cross-env": "5.2.0",
     "firebase-tools": "^7.1.0",
