--- a/firebase.json
+++ b/firebase.json
@@ -2,11 +2,17 @@
   "functions": {
     "source": "dist/functions",
     "predeploy": [
+      "npm run clean",
       "npm run lint-functions",
-      
+      "npm run lint-app",
+      "npm run typecheck-app",
       "npm run build-functions",
+      "npm run build-app",
       "npm run copy-deps",
       "npm run install-deps"
+    ],
+    "ignore": [
+      "**/node_modules/**"
     ]
   },
   "hosting": {
