--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -10,7 +10,11 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "skipLibCheck": true
   },
+  "exclude": [
+    "**/node_modules/**"
+  ],
   "compileOnSave": true
 }
