--- a/package.json
+++ b/package.json
@@ -11,21 +11,19 @@
     "serve": "cross-env NODE_ENV=production firebase serve",
     "deploy": "firebase deploy",
     "clean": "rimraf \"dist\"",
-    "build-app": "next build \"src\"",
+    "build-app": "next build",
     "build-public": "cpx \"public/**/*.*\" \"dist/public\" -C",
     "build-functions": "tsc --project functions",
     "lint-app": "tslint --project src",
     "typecheck-app": "tsc --project src",
     "lint-functions": "tslint --project functions",
     "copy-deps": "cpx \"*{package.json,package-lock.json,yarn.lock}\" \"dist/functions\" -C",
-    "install-deps": "cd \"dist/functions\" && npm i"
+    "install-deps": "cd \"dist/functions\" && npm i --production"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@zeit/next-sass": "^1.0.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.1.0",
@@ -33,7 +31,7 @@
     "react": "16.8.6",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.8.6",
-    "sass": "^1.26.3",
+    "sass": "^1.26.5",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
@@ -45,8 +43,8 @@
     "cross-env": "5.2.0",
     "firebase-tools": "^7.1.0",
     "rimraf": "2.6.2",
-    "tslint": "^5.11.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.2.0"
+    "tslint": "^6.1.2",
+    "tslint-react": "^5.0.0",
+    "typescript": "^3.8.3"
   }
 }
